manifests/overlays/team-c/db-statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  template:
    spec:
      serviceAccountName: db-workload
      automountServiceAccountToken: false
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        storageClassName: encrypted-gp3
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
