manifests/overlays/team-c/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: team-c
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: web # Deployment의 label과 일치
  ports:
    - protocol: TCP
      port: 80 # Ingress가 바라보는 포트
      targetPort: 80 # Deployment 컨테이너가 열어놓은 포트
